--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "vite:build": "vite build"
   },
   "dependencies": {
-    "@azure/storage-blob": "^12.17.0",
+    "@aws-sdk/client-s3": "^3.726.1",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@iconify/react": "^4.1.1",
